Added users list and create

--- a/src/components/ui/Sidebar/sidebar.scss
+++ b/src/components/ui/Sidebar/sidebar.scss
@@ -69,7 +69,8 @@
     }
 
     ul.apps {
-        font-width: 0;
+        font-size: 0;
+
         li {
             display: inline-block;
             width: 100%;
