Building without errors

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,6 +9,6 @@
 
 // --------------------------------------------------------------------- Theming
 :root {
-    // --color-main: #e31d20;
-    // --color-main-alt: #e31d20;
+    --color-main: #e31d20;
+    --color-main-alt: #e31d20;
 }
