Added app selector

--- a/src/components/ui/ResourceTable/resource-table.scss
+++ b/src/components/ui/ResourceTable/resource-table.scss
@@ -5,8 +5,8 @@
 
     .table {
         display: grid;
-        grid-row-gap: var(--size-small);
-        --card-padding: var(--size-small);
+        grid-row-gap: var(--size-tiny);
+        --card-padding: var(--size-tiny);
 
         .row {
             position: relative;
