Added styling option for theme

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,11 +4,6 @@
 :root {
     --sidebar-width: 6rem;
     --header-height: 6rem;
+    --input-height: 4rem;
     --h1-font-size: var(--font-size-large);
-}
-
-// --------------------------------------------------------------------- Theming
-:root {
-    --color-main: #e31d20;
-    --color-main-alt: #e31d20;
 }
