--- a/src/styles/lib/_extenders.scss
+++ b/src/styles/lib/_extenders.scss
@@ -8,5 +8,5 @@
 
 
 %bg-waves {
-    background-image: url('/images/patterns/waves.svg');
+    background-image: url('/admin/images/patterns/waves.svg');
 }
