--- a/src/components/ui/Header/header.scss
+++ b/src/components/ui/Header/header.scss
@@ -20,6 +20,7 @@
         flex: 1;
         margin: 0;
         line-height: var(--header-height);
+        font-size: var(--font-size-large);
     }
 
     ui-header-user, ui-header-notifications {
