Upgraded deps and refs. Added side-menu

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@
 // ------------------------------------------------------------------- Structure
 :root {
     --sidebar-width: 6rem;
+    --side-menu-width: 20rem;
     --header-height: 6rem;
     --input-height: 4rem;
     --h1-font-size: var(--font-size-large);
