--- a/src/components/pages/Admin/page-admin.scss
+++ b/src/components/pages/Admin/page-admin.scss
@@ -1,6 +1,13 @@
 @import 'zen-css/import';
 
 :host {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: var(--page-padding);
+
     main {
         // Sidebar offset
         position: absolute;
