--- a/src/components/ui/Header/header.scss
+++ b/src/components/ui/Header/header.scss
@@ -9,11 +9,11 @@
     left: var(--sidebar-width);
     right: 0;
 
-    padding-left: calc(var(--header-height) / 4);
-    background-color: default('color-white');
-    border-left: default('border-100');
+    padding-left: var(--size-main);
+    background-color: var(--header-bg);
+    border-left: var(--header-divider);
     border-width: 1px;
-    box-shadow: 1rem 0.5rem 2rem var(--color-main-soft);
+    box-shadow: var(--header-shadow);
     z-index: 100;
 
     h1 {
@@ -25,7 +25,7 @@
 
     ui-header-user, ui-header-notifications {
         flex-grow: 0;
-        border-left: var(--border-100);
+        border-left: var(--header-divider);
     }
 }
 
