--- a/src/components/ui/Sidebar/sidebar.scss
+++ b/src/components/ui/Sidebar/sidebar.scss
@@ -4,15 +4,15 @@
 // @import "../../../styles/lib/extenders";
 
 :host {
-    position: fixed;
+    position: absolute;
     height: 100%;
     left: 0;
     top: 0;
     width: var(--sidebar-width);
-    background-color: var(--color-white);
+    background-color: var(--sidebar-bg);
     z-index: 1;
     box-sizing: border-box;
-    box-shadow: 0.5rem 0 2rem var(--color-main-soft);
+    box-shadow: var(--sidebar-shadow);
 
     &, * {
         @extend %reset;
@@ -32,6 +32,7 @@
             background: var(--gradient-main);
             opacity: 0;
             transition: all var(--transition-time);
+            @extend %rounded;
         }
 
         &.active {
@@ -56,7 +57,7 @@
         height: var(--sidebar-width);
         line-height: var(--sidebar-width);
         text-align: center;
-        border-top: default('border-100');
+        border-top: var(--header-divider);
         transition: all calc(var(--transition-time) / 2);
 
         zen-icon {
@@ -73,7 +74,7 @@
     }
 
     zen-link.top-link, .search {
-        border-bottom: default('border-100');
+        border-bottom: var(--header-divider);
     }
 
     .search {
@@ -90,24 +91,28 @@
             height: var(--sidebar-width);
             text-align: center;
             clip-path: url(#sidebar-app-clip);
-            border-bottom: default('border-100');
+            border-bottom: var(--header-divider);
 
             zen-link {
-                padding: default('size-tiny');
-                transition: all default('transition-time');
+                transition: all calc(var(--transition-time) / 2);
 
                 .app {
                     width: 100%;
                     height: 100%;
-                    transition: all default('transition-time');
+                    transition: all calc(var(--transition-time) / 2);
                     opacity: 0.7;
+                    transform: scale(0.75);
+
+
+                }
+                &:hover .app {
+                    transform: scale(0.85);
                 }
 
                 &.active {
-                    padding: 0;
                     .app {
-                        border-radius: 0;
                         opacity: 1;
+                        transform: scale(1);
                     }
                 }
             }
