Upgraded router and smaller fixes for lit upgrade

--- a/src/components/pages/Admin/Settings/SettingsMenu/page-settings-menu.scss
+++ b/src/components/pages/Admin/Settings/SettingsMenu/page-settings-menu.scss
@@ -16,8 +16,9 @@
         height: var(--size-main);
         line-height: var(--size-main);
 
-        zen-link {
+        a {
             width: 100%;
+            text-decoration: none;
         }
 
         * {
