--- a/src/components/ui/AppSelector/app-selector.scss
+++ b/src/components/ui/AppSelector/app-selector.scss
@@ -67,7 +67,7 @@
             list-style: none;
             padding: 0;
 
-            zen-link {
+            a {
                 width: 100%;
                 display: block;
             }
