--- a/src/components/pages/Admin/page-admin.scss
+++ b/src/components/pages/Admin/page-admin.scss
@@ -8,7 +8,7 @@
     bottom: 0;
     margin: var(--page-padding);
 
-    main {
+    zen-router {
         // Sidebar offset
         position: absolute;
         left: var(--sidebar-width);
