--- a/src/components/ui/SideMenu/side-menu.scss
+++ b/src/components/ui/SideMenu/side-menu.scss
@@ -25,7 +25,7 @@
             padding-left: var(--size-small);
             border-bottom: 1px solid var(--color-grey-100);
 
-            zen-link {
+            a {
                 width: 100%;
                 * {
                     vertical-align: middle;
