--- a/src/components/ui/Sidebar/sidebar.scss
+++ b/src/components/ui/Sidebar/sidebar.scss
@@ -5,21 +5,22 @@
 
 :host {
     position: absolute;
+    display: grid;
     height: 100%;
     left: 0;
     top: 0;
     width: var(--sidebar-width);
     background-color: var(--sidebar-bg);
     z-index: 1;
-    box-sizing: border-box;
     box-shadow: var(--sidebar-shadow);
+    grid-template-rows: repeat(2, var(--sidebar-width)) 1fr var(--sidebar-width);
 
     &, * {
         @extend %reset;
     }
 
 
-    zen-link.top-link {
+    a.top-link {
         display: inline-block;
         position: relative;
         height: var(--sidebar-width);
@@ -51,10 +52,6 @@
     }
 
     .apps-button {
-        position: absolute;
-        bottom: 0;
-        width: var(--sidebar-width);
-        height: var(--sidebar-width);
         line-height: var(--sidebar-width);
         text-align: center;
         border-top: var(--header-divider);
@@ -73,7 +70,7 @@
         }
     }
 
-    zen-link.top-link, .search {
+    a.top-link, .search {
         border-bottom: var(--header-divider);
     }
 
@@ -84,29 +81,29 @@
 
     ul.apps {
         font-size: 0;
+        display: grid;
+        grid-auto-rows: var(--sidebar-width);
 
         li {
-            display: inline-block;
-            width: 100%;
             height: var(--sidebar-width);
             text-align: center;
             clip-path: url(#sidebar-app-clip);
             border-bottom: var(--header-divider);
 
-            zen-link {
+            a {
                 transition: all calc(var(--transition-time) / 2);
 
                 .app {
-                    width: 100%;
-                    height: 100%;
+                    width: 90%;
+                    height: 90%;
+                    margin-left: 5%;
+                    margin-top: 5%;
                     transition: all calc(var(--transition-time) / 2);
-                    opacity: 0.7;
-                    transform: scale(0.75);
-
-
+                    opacity: 0.4;
+                    transform: scale(0.7);
                 }
                 &:hover .app {
-                    transform: scale(0.85);
+                    transform: scale(0.8);
                 }
 
                 &.active {
