Large overhaul for lit upgrade and app upgrade

--- a/src/components/pages/Admin/App/page-app.scss
+++ b/src/components/pages/Admin/App/page-app.scss
@@ -1,11 +1,9 @@
+@import 'zen-css/import';
+
 :host {
-    section {
-        position: absolute;
-        left: var(--side-menu-width);
-        top: 0;
-        right: 0;
-        bottom: 0;
-        padding: var(--size-small);
-        overflow: auto;
-    }
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: calc(var(--page-padding) * 2);
 }
